--- a/Antirrhinum Phase 1 Script.ipynb
+++ b/Antirrhinum Phase 1 Script.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,6 +34,8 @@
     "import matplotlib.pyplot as plt\n",
     "import cPickle as pickle\n",
     "import itertools\n",
+    "import simplekml\n",
+    "import math\n",
     "from pyproj import Proj  # Package for doing GPS-calculations and Projections\n",
     "from collections import Counter\n",
     "\n",
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -919,7 +921,7 @@
        "9  CADI0010         0          0         0               NaN    -10"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -969,7 +971,7 @@
        "[9, '22734_S2801']"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1226,14 +1228,21 @@
     "final_decision.loc[:,['Latitude','Longitude','Altitude']]=coordinates\n",
     "final_decision.head(10)\n",
     "\n",
+    "# Write a quick script to set 6681 to 6700 to Final Score 0 (this was unwanted Duplicates!!)\n",
+    "for i in range(6681,6701):     # Remember the Python Indexing\n",
+    "    plantID='S'+str(i)\n",
+    "    index=np.where(final_decision.PlantID==plantID)[0][0]\n",
+    "    final_decision.loc[index,'Score']=0\n",
     "print(\"Saving...\")\n",
+    "\n",
+    "\n",
     "final_decision.to_csv(output_folder + id_track_decision_output_file_name, sep = '$')\n",
     "print(\"Done. \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1242,246 +1251,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'5': 12028, '4': 2620, '7': 1528, '1': 601, '8': 361, '3': 338, '9': 311, '0': 237, '2': 119, '10': 72})\n"
+      "Counter({'5': 12028, '4': 2620, '7': 1528, '1': 601, '8': 361, '3': 338, '9': 311, '0': 237, '2': 119, '10': 72})\n",
+      "Total length of data: 18215\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PlantID</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Altitude</th>\n",
-       "      <th>ID_Track_Decision</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CADI0001</td>\n",
-       "      <td>42.290447</td>\n",
-       "      <td>1.857598</td>\n",
-       "      <td>1145.28</td>\n",
-       "      <td>11351_CADI0001</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CADI0002</td>\n",
-       "      <td>42.290609</td>\n",
-       "      <td>1.857895</td>\n",
-       "      <td>1149.49</td>\n",
-       "      <td>11352_CADI0002</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CADI0003</td>\n",
-       "      <td>42.290668</td>\n",
-       "      <td>1.857975</td>\n",
-       "      <td>1150.04</td>\n",
-       "      <td>11353_CADI0003</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CADI0004</td>\n",
-       "      <td>42.290662</td>\n",
-       "      <td>1.857970</td>\n",
-       "      <td>1149.98</td>\n",
-       "      <td>11354_CADI0004</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CADI0005</td>\n",
-       "      <td>42.290740</td>\n",
-       "      <td>1.858025</td>\n",
-       "      <td>1149.53</td>\n",
-       "      <td>11355_CADI0005</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CADI0006</td>\n",
-       "      <td>42.290745</td>\n",
-       "      <td>1.858050</td>\n",
-       "      <td>1149.39</td>\n",
-       "      <td>11356_CADI0006</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CADI0007</td>\n",
-       "      <td>42.290760</td>\n",
-       "      <td>1.858031</td>\n",
-       "      <td>1150.08</td>\n",
-       "      <td>11357_CADI0007</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CADI0008</td>\n",
-       "      <td>42.290792</td>\n",
-       "      <td>1.858086</td>\n",
-       "      <td>1150.95</td>\n",
-       "      <td>11358_CADI0008</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>CADI0009</td>\n",
-       "      <td>42.271763</td>\n",
-       "      <td>1.853680</td>\n",
-       "      <td>1009.02</td>\n",
-       "      <td>11359_CADI0009</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>CADI0010</td>\n",
-       "      <td>42.272055</td>\n",
-       "      <td>1.853560</td>\n",
-       "      <td>1017.18</td>\n",
-       "      <td>11360_CADI0010</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>CADI0011</td>\n",
-       "      <td>42.272006</td>\n",
-       "      <td>1.853582</td>\n",
-       "      <td>1014.76</td>\n",
-       "      <td>11361_CADI0011</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>CADI0012</td>\n",
-       "      <td>42.272004</td>\n",
-       "      <td>1.853449</td>\n",
-       "      <td>1011.75</td>\n",
-       "      <td>11362_CADI0012</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>CADI0013</td>\n",
-       "      <td>42.271988</td>\n",
-       "      <td>1.853366</td>\n",
-       "      <td>1011.27</td>\n",
-       "      <td>11363_CADI0013</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>CADI0014</td>\n",
-       "      <td>42.272036</td>\n",
-       "      <td>1.853457</td>\n",
-       "      <td>1011.02</td>\n",
-       "      <td>11364_CADI0014</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>CADI0015</td>\n",
-       "      <td>42.271949</td>\n",
-       "      <td>1.853384</td>\n",
-       "      <td>1010.03</td>\n",
-       "      <td>11365_CADI0015</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>CADI0017</td>\n",
-       "      <td>42.282602</td>\n",
-       "      <td>1.851434</td>\n",
-       "      <td>1009.24</td>\n",
-       "      <td>11367_CADI0017</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>CADI0018</td>\n",
-       "      <td>42.282628</td>\n",
-       "      <td>1.851419</td>\n",
-       "      <td>1017.04</td>\n",
-       "      <td>11368_CADI0018</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>CADI0019</td>\n",
-       "      <td>42.283093</td>\n",
-       "      <td>1.851257</td>\n",
-       "      <td>1014.38</td>\n",
-       "      <td>11369_CADI0019</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>CADI0020</td>\n",
-       "      <td>42.283355</td>\n",
-       "      <td>1.851285</td>\n",
-       "      <td>1015.46</td>\n",
-       "      <td>11370_CADI0020</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>CADI0021</td>\n",
-       "      <td>42.284948</td>\n",
-       "      <td>1.851775</td>\n",
-       "      <td>1026.83</td>\n",
-       "      <td>11371_CADI0021</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PlantID   Latitude  Longitude  Altitude ID_Track_Decision Score\n",
-       "0   CADI0001  42.290447   1.857598   1145.28    11351_CADI0001     5\n",
-       "1   CADI0002  42.290609   1.857895   1149.49    11352_CADI0002     5\n",
-       "2   CADI0003  42.290668   1.857975   1150.04    11353_CADI0003     5\n",
-       "3   CADI0004  42.290662   1.857970   1149.98    11354_CADI0004     5\n",
-       "4   CADI0005  42.290740   1.858025   1149.53    11355_CADI0005     5\n",
-       "5   CADI0006  42.290745   1.858050   1149.39    11356_CADI0006     5\n",
-       "6   CADI0007  42.290760   1.858031   1150.08    11357_CADI0007     5\n",
-       "7   CADI0008  42.290792   1.858086   1150.95    11358_CADI0008     5\n",
-       "8   CADI0009  42.271763   1.853680   1009.02    11359_CADI0009     4\n",
-       "9   CADI0010  42.272055   1.853560   1017.18    11360_CADI0010     4\n",
-       "10  CADI0011  42.272006   1.853582   1014.76    11361_CADI0011     4\n",
-       "11  CADI0012  42.272004   1.853449   1011.75    11362_CADI0012     5\n",
-       "12  CADI0013  42.271988   1.853366   1011.27    11363_CADI0013     4\n",
-       "13  CADI0014  42.272036   1.853457   1011.02    11364_CADI0014     5\n",
-       "14  CADI0015  42.271949   1.853384   1010.03    11365_CADI0015     1\n",
-       "15  CADI0017  42.282602   1.851434   1009.24    11367_CADI0017     4\n",
-       "16  CADI0018  42.282628   1.851419   1017.04    11368_CADI0018     4\n",
-       "17  CADI0019  42.283093   1.851257   1014.38    11369_CADI0019     4\n",
-       "18  CADI0020  42.283355   1.851285   1015.46    11370_CADI0020     5\n",
-       "19  CADI0021  42.284948   1.851775   1026.83    11371_CADI0021     4"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#print([i for i in final_dec])\n",
     "# Do Statistics on the Score-Vector\n",
     "print(Counter(score_vec))  # Print Counter how often everything was scored!\n",
-    "#final_decision.head(10)\n",
+    "final_decision.head(10)\n",
+    "print(\"Total length of data: %i\" %len(final_decision))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Google-Maps Extractor successfully loaded!\n",
+      "Creating .kml\n",
+      "final_scores.kml successfully created! \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract GPS-Coordinates for Map:\n",
+    "# Not Necessary for correction; it is just a nice toy\n",
+    "# Assume data-frame is final_decision\n",
+    "# \n",
+    "google_map_file_name =  \"final_scores.kml\"\n",
+    "######################################################## Style Files\n",
+    "style = simplekml.StyleMap()  # Create a style map for highlight style and normal style FOR UNCORRECTED\n",
+    "style.normalstyle.labelstyle.scale = 0\n",
+    "style.normalstyle.iconstyle.icon.href = \"http://maps.google.com/mapfiles/kml/paddle/wht-blank.png\"\n",
+    "style.highlightstyle.labelstyle.scale = 1\n",
+    "style.highlightstyle.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png'\n",
     "\n",
-    "final_decision.head(20)"
+    "style2 = simplekml.StyleMap()  # Create a style map for highlight style and normal style FOR UNCORRECTED\n",
+    "style2.normalstyle.labelstyle.scale = 0\n",
+    "style2.normalstyle.iconstyle.icon.href = \"http://maps.google.com/mapfiles/kml/paddle/ylw-blank.png\"\n",
+    "style2.highlightstyle.labelstyle.scale = 1\n",
+    "style2.highlightstyle.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png'\n",
+    "\n",
+    "style3 = simplekml.StyleMap()  # Create a style map for highlight style and normal style FOR UNCORRECTED\n",
+    "style3.normalstyle.labelstyle.scale = 0\n",
+    "style3.normalstyle.iconstyle.icon.href = \"http://maps.google.com/mapfiles/kml/paddle/orange-blank.png\"\n",
+    "style3.highlightstyle.labelstyle.scale = 1\n",
+    "style3.highlightstyle.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png'\n",
+    "\n",
+    "style4 = simplekml.StyleMap()  # Create a style map for highlight style and normal style FOR UNCORRECTED\n",
+    "style4.normalstyle.labelstyle.scale = 0\n",
+    "style4.normalstyle.iconstyle.icon.href = \"http://maps.google.com/mapfiles/kml/paddle/grn-blank.png\"\n",
+    "style4.highlightstyle.labelstyle.scale = 1\n",
+    "style4.highlightstyle.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png'\n",
+    "############################################################\n",
+    "def set_score_style(score):\n",
+    "    '''Short function that sets the style for every score'''\n",
+    "    score=int(score)\n",
+    "\n",
+    "    if score<=2:     # GPS Mismatch\n",
+    "        return style\n",
+    "\n",
+    "    if score <= 5:  # Single GPS Entry\n",
+    "        return style2\n",
+    "\n",
+    "    if score <= 8:  # Multiple GPS Entries\n",
+    "        return style3\n",
+    "\n",
+    "    if score > 8:    # Great Entry\n",
+    "        return style4\n",
+    "\n",
+    "\n",
+    "    print(\"This was not supposed to happen!\")\n",
+    "    return 0\n",
+    "\n",
+    "class KML_extractor(object):\n",
+    "    '''\n",
+    "    Class containing various methods to export to google Earth.\n",
+    "    '''\n",
+    "    kml = 0\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        '''\n",
+    "        Constructor.\n",
+    "        '''\n",
+    "        print(\"Google-Maps Extractor successfully loaded!\")\n",
+    "        # my_proj = Proj(proj='utm',zone=\"31T\",ellps='WGS84',units='m')   # Prepare the Longitude/Latidude to Easting/Northing transformation\n",
+    "\n",
+    "\n",
+    "    def create_kml(self, names, coords, scores, output_path):\n",
+    "        '''Method to extract  Google Earth Data'''\n",
+    "        kml = simplekml.Kml()  # Load the KML Creater\n",
+    "        \n",
+    "\n",
+    "       \n",
+    "        for i in range(len(names)):\n",
+    "            if math.isnan(coords[i, 0]):   # Check for nans\n",
+    "                continue  # Stop if GPS-data marked missing \n",
+    "            # Coords: Longitude - Latitude - Altitude    \n",
+    "            pnt = kml.newpoint(name=names[i], coords=[tuple(coords[i, :])]) \n",
+    "            pnt.stylemap = set_score_style(scores[i])\n",
+    "            pnt.comment = str(scores[i])\n",
+    "            pnt.altitudemode = 'absolute'\n",
+    "            pnt.extrude = 1\n",
+    "\n",
+    "        kml.save(output_path)\n",
+    "\n",
+    "        \n",
+    "kml_extractor = KML_extractor() # Create the KML Extractor\n",
+    " \n",
+    "coords = final_decision.loc[:, ['Longitude','Latitude','Altitude']].values   # Notice that Longitude and Latitude are swapped\n",
+    "#good_inds = ~coords.isnull().any(axis=1) # Extract only values with actual coordinates\n",
+    "\n",
+    "names = final_decision.PlantID.values\n",
+    "scores = final_decision.Score.values\n",
+    "\n",
+    "print(\"Creating .kml\")\n",
+    "\n",
+    "kml_extractor.create_kml(names, coords, scores, output_folder + google_map_file_name)\n",
+    "print(google_map_file_name + \" successfully created! \")"
    ]
   },
   {
@@ -1494,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1647,7 +1542,8 @@
     "for plant_id in df.PlantID.iloc[:]: # Iterate over all Plant IDs\n",
     "    inds=look_up_plantID(plant_id,df)\n",
     "    matching_plants = df.iloc[inds,:]\n",
-    "    matching_plants = matching_plants[matching_plants.Track_Score>=3] # Extract plants with track_score at least 2\n",
+    "    matching_plants = matching_plants[matching_plants.Track_Score>=3] # Extract plants with track_score at least 3\n",
+    "    \n",
     "    \n",
     "    #matching_plants_awesome = matching_plants[matching_plants.Track_Score==3]\n",
     "    \n",
